--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -75,7 +75,7 @@ html {
 }
 
 body {
-  font-family: var(--body-font);
+  font-family: var(--body-font), serif;
   font-size: var(--normal-font-size);
   background-color: var(--body-color);
   color: var(--text-color);
@@ -114,7 +114,7 @@ img {
 
 /*=============== REUSABLE CSS CLASSES ===============*/
 .container {
-  max-width: 2640px;
+  max-width: 1150px;
   margin-inline: 1.5rem;
 }
 
@@ -187,7 +187,7 @@ img {
   left: 0;
   background-color: var(--body-color);
   z-index: var(--z-fixed);
-  transition: box-shadow 0.4s;
+  transition: box-shadow .4s;
 }
 
 .nav {
@@ -226,7 +226,7 @@ img {
 }
 
 /* Navigation for mobile devices */
-@media screen and (max-width: 2560px) {
+@media screen and (max-width: 1150px) {
   .nav__menu {
     position:fixed;
     top: -100%;
@@ -285,14 +285,14 @@ img {
 .nav__link {
   position: relative;
   color: var(--text-color-light);
-  font-size: var(--h2-font-size);
+  font-size: var(--h3-font-size);
   font-weight: var(--font-semi-bold);
   transition: color .3s;
 }
 
 .nav__link::after {
   content: '';
-  width: 25%;
+  width: 0;
   height: 2px;
   background-color: var(--white-color);
   position: absolute;
@@ -673,10 +673,123 @@ img {
 }
 
 /*=============== PROJECTS ===============*/
+.projects {
+  background-color: var(--container-color);
+    transition: background-color .4s;
+}
 
+.projects__container {
+  row-gap: 2rem;
+}
+
+.projects__card {
+  padding: 1rem 1rem 2rem;
+  transition: background-color .4s;
+}
+
+.projects__image {
+  position: relative;
+  margin-bottom: .75rem;
+}
+
+.projects__button {
+  position: absolute;
+  right: 1rem;
+  bottom: -1.5rem;
+  padding: 1rem;
+}
+
+.projects__content {
+  margin-bottom: 1.25rem;
+}
+
+.projects__subtitle {
+  position: relative;
+  display: inline-block;
+  font-size: var(--small-font-size);
+  font-weight: var(--font-medium);
+  color: var(--text-color);
+  margin-bottom: .75rem;
+  padding-left: 1.75rem;
+}
+
+.projects__subtitle::after {
+  content: '';
+  width: 20px;
+  height: 1px;
+  background-color: var(--text-color);
+  position: absolute;
+  top: 50%;
+  left: 0;
+}
+
+.projects__title {
+  font-size: var(--h3-font-size);
+    margin-bottom: .75rem;
+}
+
+.projects__buttons {
+  display: flex;
+  align-items: center;
+  column-gap: 1rem;
+}
+
+.projects__link {
+  display: flex;
+  align-items: center;
+  column-gap: .25rem;
+  color: var(--text-color);
+  font-size: var(--small-font-size);
+  font-weight: var(--font-medium);
+  transition: color .4s;
+}
+
+.projects__link i {
+  font-size: 1rem;
+  color: var(--title-color);
+  transition: color .4s;
+}
+
+.projects__link:hover,
+.projects__link:hover i {
+  color: var(--first-color);
+}
+
+.projects__card:hover {
+  background-color: var(--white-color);
+}
 
 /*=============== CONTACT ===============*/
+.contact {
+  padding-bottom: 0;
+}
 
+.contact__container {
+  position: relative;
+  grid-template-rows: 300px max-content max-content;
+  row-gap: 0;
+}
+
+.contact__data {
+  position: relative;
+  width: 300px;
+  height: 300px;
+  background-color: var(--container-color);
+  padding: 3rem 1.5rem 3.5rem;
+  margin-left: auto;
+  border-bottom: 4px solid var(--first-color);
+  z-index: 5;
+  transition: background-color .4s;
+}
+
+.contact__data .section__title-2 {
+  margin: 0 0 1.5rem;
+  transform: translateX(-3rem)
+}
+
+.contact__desctiption-1 {
+  color: var(--title-color)
+}
 
 /* Opaque placeholder */
 
