--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -9,6 +9,7 @@
   --first-color: hsl(14, 98%, 50%);
   --black-color: hsl(0, 0%, 0%);
   --black-color-light: hsl(0, 0%, 40%);
+  --geo-color: hsl(0, 0%, 0%);
   --white-color: hsl(0, 0%, 95%);
   --title-color: hsl(0, 0%, 0%);
   --text-color: hsl(0, 0%, 35%);
@@ -79,6 +80,7 @@ body {
   font-size: var(--normal-font-size);
   background-color: var(--body-color);
   color: var(--text-color);
+  transition: background-color .4s;
 }
 
 h1, h2, h3, h4 {
@@ -101,16 +103,81 @@ img {
 }
 
 /*=============== THEME ===============*/
+.nav__buttons {
+  display: flex;
+  align-items: center;
+  column-gap: 1rem;
+}
 
+.change-theme {
+  font-size: 1.25rem;
+  color: var(--title-color);
+  cursor: pointer;
+  transition: color .3s;
+}
 
 /*========== Variables Dark theme ==========*/
-
+body.dark-theme {
+  --first-color: hsl(14, 80%, 50%);
+  --black-color: hsl(0, 0%, 18%);
+  --geo-color: hsl(0, 0%, 95%);
+  --black-color-light: hsl(0, 0%, 30%);
+  --title-color: hsl(0, 0%, 95%);
+  --text-color: hsl(0, 0%, 70%);
+  --body-color: hsl(0, 0%, 8%);
+  --container-color: hsl(0, 0%, 12%);
+}
 
 /*========== 
 	Color changes in some parts of 
 	the website, in dark theme
 ==========*/
+.dark-theme .shadow-header {
+  box-shadow: 0 1px 12px hsla(0, 0%, 0%, .6);
+}
 
+.dark-theme .section__title-1::after,
+.dark-theme .section__title-2::after {
+  background-color: hsla(14, 70%, 50%, .2);
+}
+
+.dark-theme :is(.home__arrow, .home__line, .about__line) {
+  filter: none;
+}
+
+.dark-theme .home__description b {
+  background: linear-gradient(90deg,
+              hsla(14, 80%, 50%, .3),
+              hsla(14, 80%, 50%, 0));
+}
+
+.dark-theme :is(.button__ghost, .services__icon i) {
+  color: var(--white-color);
+}
+
+.dark-theme .projects__card:hover {
+  background-color: var(--body-color);
+}
+
+.dark-theme :is(.contact__mail, .contact__input, .contact__label) {
+  background-color: var(--container-color);
+}
+
+.dark-theme .footer {
+  background-color: hsl(0, 0%, 4%);
+}
+
+.dark-theme::-webkit-scrollbar {
+  background-color: hsl(0, 0%, 20%);
+}
+
+.dark-theme::-webkit-scrollbar-thumb {
+  background-color: hsl(0, 0%, 30%);
+}
+
+.dark-theme::-webkit-scrollbar-thumb:hover {
+  background-color: hsl(0, 0%, 40%);
+}
 
 /*=============== REUSABLE CSS CLASSES ===============*/
 .container {
@@ -170,7 +237,7 @@ img {
   position: absolute;
   width: 16px;
   height: 16px;
-  border: 3px solid var(--black-color);
+  border: 3px solid var(--geo-color);
   left: -5px;
   top: -5px;
 }
@@ -187,7 +254,7 @@ img {
   left: 0;
   background-color: var(--body-color);
   z-index: var(--z-fixed);
-  transition: box-shadow .4s;
+  transition: box-shadow .4s, background-color .4s;
 }
 
 .nav {
@@ -328,7 +395,13 @@ img {
 }
 
 /* Active link */
+.active-link {
+  color: var(--white-color);
+}
 
+.active-link::after {
+  width: 25%;
+}
 
 /*=============== HOME ===============*/
 
@@ -424,7 +497,7 @@ img {
   margin-bottom: 1.5rem;
 }
 
-.home__description {
+.home__description b{
   background: linear-gradient(
           90deg,
           hsla(14, 98%, 50%, .3),
@@ -1022,7 +1095,7 @@ img {
 .scrollup {
   position: fixed;
   right: 1rem;
-  bottom: 3rem;
+  bottom: -50%;
   background-color: var(--black-color);
   display: inline-flex;
   padding: 8px;
@@ -1037,7 +1110,9 @@ img {
 }
 
 /* Show Scroll Up */
-
+.show-scroll {
+  bottom: 3rem;
+}
 
 /*=============== BREAKPOINTS ===============*/
 /* For small devices */
