fixed scroll active section highlighting, updating styles

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1247,4 +1247,114 @@ body.dark-theme {
     font-size: var(--normal-font-size);
   }
 
+  .nav__link:hover {
+    color: var(--title-color);
+  }
+
+  .nav__link::after {
+    background-color: var(--title-color);
+  }
+
+  .active-link {
+    color: var(--title-color);
+  }
+
+  .nav__link-button {
+    background-color: var(--black-color);
+    color: var(--white-color);
+    padding: 1.1rem 1.5rem;
+  }
+
+  .nav__link-button:hover {
+    color: var(--white-color);
+  }
+
+  .nav__link-button::after {
+    background-color: transparent;
+  }
+
+  .change-theme {
+    color: var(--text-color);
+  }
+
+  .change-theme:hover {
+    color: var(--title-color);
+  }
+
+  .home__container {
+    grid-template-columns: repeat(2, 460px);
+    gap: 2rem 4rem;
+    align-items: center;
+    padding-block: 5.5rem;
+  }
+
+  .home__perfil {
+    grid-column: 2 / 3;
+    grid-row: 1 / 3;
+  }
+
+  .home__image {
+    width: 350px;
+  }
+
+  .home__shadow {
+    right: -1.25rem;
+    bottom: -1.25rem;
+    border: 6px solid var(--black-color)
+  }
+
+  .home__name,
+  .home__description {
+    text-align: initial;
+  }
+
+  .home__name {
+    align-self: flex-end;
+  }
+
+  .home__info {
+    margin-top: 0;
+    align-self: flex-start;
+  }
+
+  .home__description {
+    position: relative;
+    font-size: var(--h2-font-size);
+    margin-bottom: 5.5rem;
+    padding-left: 3rem;
+  }
+
+  .home__description::after {
+    content: '';
+    width: 32px;
+    height: 2px;
+    background-color: var(--title-color);
+    position: absolute;
+    left: 0;
+    top: 14px;
+  }
+
+  .home__scroll {
+    margin: 0;
+    display: flex;
+    align-items: center;
+    column-gap: .75rem;
+  }
+
+  .home__scroll-text {
+    display: block;
+    color: var(--text-color);
+    font-size: var(--smaller-font-size);
+    font-weight: var(--font-medium);
+  }
+
+  .home__scroll-box {
+    width: 44px;
+    height: 44px;
+  }
+
+  .home__scroll-box i {
+    font-size: 1.25rem;
+  }
+
 }
