--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1357,4 +1357,124 @@ body.dark-theme {
     font-size: 1.25rem;
   }
 
+  .home__perfil .geometric-box {
+    top: 15rem;
+  }
+
+  .home__arrow {
+    top: 4.5rem;
+    left: -8rem;
+    rotate: 80deg;
+    width: 80px;
+  }
+
+  .home__line {
+    left: -15rem;
+    bottom: 4rem;
+    width: 80px;
+    rotate: 30deg;
+  }
+
+  .home__social {
+    left: initial;
+    right: -6rem;
+  }
+
+  .home__social-link {
+    font-size: 1.5rem;
+    padding: .5rem;
+  }
+
+  .about__container {
+    grid-template-columns: 440px 525px;
+    gap: 1rem 9rem;
+    padding-block: 1rem;
+  }
+
+  .about__perfil {
+    order: -1;
+    grid-row: 1 / 3;
+  }
+
+  .about__image {
+    width: 350px;
+  }
+
+  .about__img {
+    border: 8px solid var(--white-color);
+  }
+
+  .about__shadow {
+    width: 240px;
+    height: 615px;
+    top: -4.5rem;
+    right: -5.5rem;
+    border-bottom: 6px solid var(--first-color);
+  }
+
+  .about__perfil .geometric-box {
+    right: -4rem;
+    top: 4.5rem;
+  }
+
+  .about_line {
+    width: 80px;
+    right: -2rem;
+    top: 10rem;
+  }
+
+  .about__box {
+    width: 64px;
+    height: 64px;
+    right: -.75rem;
+  }
+
+  .about__container .section__title-1 {
+    align-self: flex-end;
+    margin-inline: 0;
+  }
+
+  .about__info {
+    align-self: flex-start;
+    padding-left: 3rem;
+  }
+
+  .about__description {
+    font-size: var(--h2-font-size);
+    margin-bottom: 2rem;
+  }
+
+  .about__description::after {
+    width: 32px;
+    height: 2px;
+    left: -3rem;
+    top: 14px;
+  }
+
+  .about__list {
+    margin-bottom: 5rem;
+  }
+
+  .about__buttons {
+    justify-content: initial;
+  }
+
+  .button__ghost {
+    padding: .75rem;
+  }
+
+  .button__ghost i {
+    font-size: 1.5rem;
+  }
+
+  .services__container {
+    grid-template-columns: repeat(3, 282px);
+    column-gap: 5rem;
+    padding-block: 3rem 5rem;
+  }
+
+  .services__card
+
+
+
 }
