--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,5 +1,5 @@
 /*=============== GOOGLE FONTS ===============*/
-@import url('https://fonts.googleapis.com/css2?family=Fira+Code:wght@300..700&display=swap');
+/*@import url('https://fonts.googleapis.com/css2?family=Fira+Code:wght@300..700&display=swap');*/
 /*=============== VARIABLES CSS ===============*/
 :root {
   --header-height: 3.5rem;
