--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -613,15 +613,15 @@ body.dark-theme {
   z-index: 1;
 }
 
-.about_shadow,
-.about_line,
-.about_box {
+.about__shadow,
+.about__line,
+.about__box {
   position: absolute;
 }
 
 .about__shadow {
   width: 150px;
-  height: 30px;
+  height: 385px;
   background-color: var(--body-color);
   top: -2.5rem;
   right: -3.5rem;
@@ -1407,7 +1407,7 @@ body.dark-theme {
 
   .about__shadow {
     width: 240px;
-    height: 30px;
+    height: 650px;
     top: -4.5rem;
     right: -5.5rem;
     border-bottom: 6px solid var(--first-color);
@@ -1418,7 +1418,7 @@ body.dark-theme {
     top: 4.5rem;
   }
 
-  .about_line {
+  .about__line {
     width: 80px;
     right: -2rem;
     top: 10rem;
